edge-vertical-tabs.css
/* ... */
.tabs-left .color-behind-tabs-off .topmenu button.vivaldi-horizontal-icon span.application-icon {
    display: block;
    padding-left: 7px !important;
    padding-bottom: 0;
}

.tabs-left .color-behind-tabs-off .topmenu .menubar.horizontal {
    margin-left: 30px;
}

#tabs-container {
    z-index: 9 !important;
}

#tabs-container.left:hover,
#tabs-container.right:hover {
    position: fixed;
    left: 0;
    color: var(--colorFg) !important;
    background-color: var(--colorBg);
    height: 100%;
    top: 0;
    width: 250px !important;
    padding-top: 25px;
    transition-property: width;
    transition-duration: .25s;
    transition-delay: .25s;
    transition-timing-function: ease-in;
}

#tabs-container.right:hover {
    right: 0px !important;
    left: auto !important;
}

#tabs-container.right .button-toolbar.newtab {
    flex-direction: row-reverse;
    text-align: right;
}

#tabs-container.right .tab-header {
    flex-direction: row-reverse;
}

#tabs-container.left:not(:hover),
#tabs-container.right:not(:hover) {
    width: 50px !important;
    height: 100%;
    position: fixed;
    background-color: var(--colorBg);
    top: 0;
    left: 0;
    padding-top: 25px;
}

#tabs-container.right:not(:hover) {
    right: 0px !important;
    left: auto !important;
}


#tabs-container.left {
    left: 0;
}
#tabs-container.right {
    right: 0;
}

.tab-strip {
    max-height: calc(100%);
    display: block;
    margin-bottom: 50px;
    padding: 10px !important;
    overflow-y: overlay !important;
}

#tabs-container:not(:hover) .tab-strip{
    overflow: hidden !important;
}

.tab-position {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    width: 100% !important;
    display: flex;
    height: auto !important;
    position: relative !important;
    overflow: visible !important;
    top: auto !important;
    margin-bottom: 30px;
    transform: none !important;
}

.tab-position .tab {
    max-height: 100%;
    max-width: 100%;
    display: flex;
    padding: 5px !important;
    border: 1px solid transparent !important;
    border-radius: calc(var(--radius)) !important;
    height: auto !important;
    position: relative !important;
    overflow: visible !important;
    margin: inherit !important;
    margin-bottom: -24px !important;
    font-size: 13px;
    background: none !important;
}

.tab-position .tab:hover {
    background: var(--colorBgDarker) !important;
    color: inherit !important;
}
.tab-position .tab.active {
    background-color: var(--colorBgLighter) !important;
    color: var(--colorFg) !important;
    border: 1px solid var(--colorBgDarker) !important;
    box-shadow: 0px 5px 10px var(--colorBgDarker) !important;
}

#browser:not(.ui-transparent-tabs) .tab-position .tab:hover:not(.active) {
    background-color: var(--colorBgDarker);
}


.tab-position .tab .tab-header {
    padding: 0 !important;
    flex: none !Important;
}

.tab-position .tab .favicon {
    pointer-events: none;
    flex: 0 0 18px;
    border-radius: var(--radiusRounded);
    min-width: 20px;
    padding: 1px;
    filter: unset;
    color: var(--colorFg);
    text-align: center;
}

.tab-position .tab .favicon svg {
    width: 16px;
    height: 16px;
}

.theme-dark .tab-position .tab.active .tab-header .favicon:not(.svg) {
    filter: none !important;
}


.tab-position .tab .title {
    -webkit-mask-image: -webkit-linear-gradient(180deg, transparent 0, var(--colorBg) 25px);
    -webkit-mask-position: right;
    margin-top: -2px;
    padding-left: 8px;
}

.tab-strip .tab-position-of-type {
    margin-bottom: 40px;
}

#browser:not(.alt-tabs) #tabs-container .close {
    margin-right: 6px;
    margin: 0;
    margin-top: 1px;
}

.tab-position .tab .close svg {
    margin: auto;
    color: var(--colorFgFadedMost);
}

.tab-position .tab .close svg:hover {
    color: var(--colorFg);
}

.tab-position .tab .close {
    display: flex;
    background: none;
}

#tabs-container .tab.isdiscarded .favicon {
    filter: none;
}


.toolbar-tabbar > .button-toolbar > button {
    color: var(--colorFg);
}

.button-toolbar.newtab {
    border-top: 1px solid var(--colorBgDarker);
    padding-top: 5px !important;
    left: 0 !important;
    flex: none !important;
    display: inline-block !important;
    width: 100% !important;
    top: auto !important;
}

.button-toolbar.newtab button {
    width: 100%;
}

.resize .tab-strip .toolbar-tabbar {
    z-index: 999999;
    background: var(--colorBg);
    position: sticky !important;
    bottom: -30px;
    padding-bottom: 20px;
}

.toolbar-tabbar .newtab > button {
    width: 100%;
}

.toolbar-tabbar .newtab > button::hover {
    cursor: pointer;
}
.toolbar-tabbar .newtab > button svg {
    height: 30px;
    width: 30px;
}

#tabs-container:hover .toolbar-tabbar .newtab > button::after {
    content: "New Tab";
    display: inline-block;
    width: 100%;
    margin-top: 0px;
    padding-left: 5px;
}

.bookmark-bar {
    padding-left: 4px;
}

.sync-and-trash-container {
    width: 100%;
    position: sticky;
    bottom: 0px;
    padding: 11px;
    text-align: left;
    justify-content: left !important;
    padding-bottom: 5px;
    margin-top: 14px !important;
    max-width: 100% !important;
}

/* #tabs-container:hover .sync-and-trash-container {
    padding-right: 0;
} */

.synced-tabs-button {
    display: block;
    width: 100%;
    margin-bottom: -2px;
}

.sync-and-trash-container .toggle-trash button span svg {
    height: 29px;
    width: 28px;
}

.sync-and-trash-container .synced-tabs-button button span svg {
    height: 29px;
    width: 28px;
}

#tabs-container:hover .sync-and-trash-container .toggle-trash button span::after {
    content: "Trash";
    display: inline-block;
    margin-top: 7px;
    padding-left: 8px;
    cursor: pointer;
}

#tabs-container:hover .sync-and-trash-container .synced-tabs-button span::after {
    content: "Sync";
    display: inline-block;
    margin-top: 7px;
    padding-left: 8px;
    cursor: pointer;
}
/* ... */

